# Mnemonic

./: .gitignore  Cargo.toml  Licence.txt  README.md  _Cargo  build.rs  long-english-word.md
resources/: crypto.py  init.js  secret.py  test.py  wordlist.txt
src/: commands.rs  config.rs  events.rs  ipc.rs  main.rs  mnemonic.rs  settings.rs  win32.rs  win32icon.rs
web-app/: buildfile.js  package-lock.json  package.json  vite.config.ts
web-app/src/: _var.scss  api.ts  app.tsx  config.ts  controls.module.scss  controls.tsx  contros.ts  icons.tsx  index.scss  interface.d.ts  interface.ts  main.tsx  notification.tsx  notifications.module.scss  popper.ts  popper.txt  router.module.scss  router.tsx  types.d.ts  utils.ts  validation.tsx  window.ts
web-app/src/assets/: iconfont.css  mapping.json
web-app/src/components/: generate.module.scss  generate.tsx  guide.tsx  restore.module.scss  restore.tsx  settings.tsx  welcome.module.scss  welcome.tsx
web-app/src/controls/: controls.module.scss  header.tsx  index.ts  interactive.tsx  layouts.tsx  naviagtion.tsx  widgets.tsx
web-app/src/popper/: components.tsx  hook.ts  popper.module.scss  popper.ts
