[package]
name = "mnemonic"
version = "1.0.0"
edition = "2021"
authors = ["Simon Koenig"]
build = "build.rs"

[dependencies]
tauri-runtime = { version = "0.6.0", features=["system-tray"] }
tauri-runtime-wry = { version = "0.6.0", features=["system-tray"] }
tauri-utils = "1.0.0-rc.8"
url = "2.2.2"
serde = "1.0.137"
serde_json = { version = "1.0.81", features = [ "raw_value" ] }
wry = "0.17.0"
serialize-to-javascript = "0.1.1"
lazy_static = "1.4.0"
uuid = "1.1.2"
winsafe = { version = "0.0.10", features = ["comctl", "ole"] }
bson = "2.4.0"
tar = "0.4.38"

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]

[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_EnhancedStorage",
    "ApplicationModel_DataTransfer",
    "alloc"
]

[build-dependencies]
winres = "0.1.12"
embed-manifest="1.3.0"
tar = "0.4.38"
walkdir = "2"

[package.metadata.winres]
OriginalFilename = "Mnemonic.exe"
FileDescription = "Mnemonic - Password Memorizer"
CompanyName = "Stausee"
